[package]
name = "mmascraper"
version = "0.1.0"
authors = ["Frederick Brock <fred@pubnub.com>"]

[dependencies]
hyper = "0.12.25"
hyper-tls = "0.3.1"
tokio = "0.1.17"
serde = "1.0.89"
serde_json = "1.0.39"
serde_derive = "1.0.89"
select = "0.4.2"
bytes = "0.4.12"
tendril = "0.4.1"
mongodb = "0.3.12"



